[package]
name = "knusperli"
version = "0.1.0"
edition = "2021"
description = "A deblocking JPEG decoder"
readme = "README.md"
repository = "https://github.com/ziemek99/knusperli"
license = "Apache-2.0"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
lodepng = "3.6.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
